--- a/votingPull/html/Auth/fg.html
+++ b/votingPull/html/Auth/fg.html
@@ -44,6 +44,7 @@
 
   <!-- linking css files -->
   <link rel="stylesheet" href="../../css/style.css" />
+  <link rel="stylesheet" href="/css/style.css" />
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Voter Pull </a>
@@ -113,7 +114,50 @@
         </ul>
       </div>
     </nav>
-    <main></main>
+    <main>
+      <div id="container">
+        <div class="card">
+          <div class="card-header">Login With Us</div>
+          <div class="card-body">
+            <h class="card-title" style="display: flex; gap: 3px">
+              <p id="day">Good Morning</p>
+              <i class="fa fa-smile"></i>
+            </h>
+
+            <form id="form">
+              <div id="reply"></div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Email address</label>
+                <input
+                  type="email"
+                  class="form-control"
+                  id="email"
+                  aria-describedby="emailHelp"
+                  placeholder="Enter email"
+                  autocomplete="email"
+                />
+                <small id="emailHelp" class="form-text text-muted"
+                  >We'll never share your email with anyone else.</small
+                >
+              </div>
+
+              <button type="submit" class="btn btn-primary">Submit</button>
+              <div>
+                <span
+                  >Back to Login
+                  <a href="/html/Auth/login.html">Click Me</a></span
+                >
+
+                <div>
+                  Already have an account!! cool
+                  <a href="/html/Auth/register.html">Click Me</a>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer>
       <ul>
         <li>
