--- a/votingPull/html/Auth/login.html
+++ b/votingPull/html/Auth/login.html
@@ -45,6 +45,9 @@
   <!-- linking css files -->
   <link rel="stylesheet" href="../../css/style.css" />
   <link rel="stylesheet" href="../../css/auth.css" />
+
+  <!-- linkinf js login script -->
+  <script src="/js/Auth/login.js" defer></script>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Voter Pull </a>
@@ -124,13 +127,14 @@
               <i class="fa fa-smile"></i>
             </h>
 
-            <form>
+            <form id="form">
+              <div id="reply"></div>
               <div class="form-group">
                 <label for="exampleInputEmail1">Email address</label>
                 <input
                   type="email"
                   class="form-control"
-                  id="exampleInputEmail1"
+                  id="email"
                   aria-describedby="emailHelp"
                   placeholder="Enter email"
                   autocomplete="email"
@@ -144,21 +148,22 @@
                 <input
                   type="password"
                   class="form-control"
-                  id="exampleInputPassword1"
+                  id="password"
                   placeholder="Password"
                 />
               </div>
-              <div class="form-check">
-                <input
-                  type="checkbox"
-                  class="form-check-input"
-                  id="exampleCheck1"
-                />
-                <label class="form-check-label" for="exampleCheck1"
-                  >Check me out</label
-                >
-              </div>
               <button type="submit" class="btn btn-primary">Submit</button>
+              <div>
+                <span
+                  >Forgotten Password ? No problem
+                  <a href="/html/Auth/fg.html">Click Me</a></span
+                >
+
+                <div>
+                  Don't have an account!! cool
+                  <a href="/html/Auth/register.html">Click Me</a>
+                </div>
+              </div>
             </form>
           </div>
         </div>
